TODO: Implement promises done in 18.1.0-pre changelog.
TODO: Oracle has examples and multiple documentation. Link to them.
PENDING: Documentation, website, mailing list update.

CentOS 8: yum install gcc python3-devel libdb libdb-util libdb-devel (libdb-5.3.28)

Docs: How to install (with env variables), replication, exception list,
testsuite, not in Python 3.

18.1.3 -:
  * Python 3.10 support. Tested in 3.10a2.

  * "make dist" will generate the HTML documentation and will include it in the
    released package. You can unpack the package to read the docs.

  * Do not install tests anymore when doing "pip install", although the tests
    are included in the package. You can unpack the package to study the tests,
    maybe in order to learn about how to use advanced Oracle Berkeley DB
    features.

    This change had an unexpected ripple effect in all code. Hopefully for the
    better.

  * Python 3.10 couldn't find build directory.

  * Python 3.10.0a2 test suite compatibility.

  * Python 3.10 added to the full test matrix.

  * After Python 3.7, threads are always available. Take them for granted,
    even in Python 3.6.

  * In the same direction, now some libraries are always available: pathlib,
    warnings, queue, gc.

  * Support "DB.get_lk_exclusive()" and "DB.set_lk_exclusive()" if you are
    linking against Oracle Berkeley DB 5.3 or newer.

18.1.2 - 2020-12-07:
  * Releases 18.1.0 and 18.1.1 were incomplete. Thanks to Mihai.i
    for reporting.

  * Export exception "DBMetaChksumFail" (from error "DB_META_CHKSUM_FAIL") if
    running Oracle Berkeley DB version 6.2 or newer.

  * Support Heap access method if you are linking against Oracle Berkeley DB
    5.3 or newer.

    - "DB.put()" can add new records or overwrite old ones in Heap access
      method.

    - "DB.append()" was extended to support Heap access method.

    - "DB.cursor()" was extended to support Heap access method.
