@@ -14,6 +14,8 @@ CentOS 8: yum install gcc python3-devel libdb libdb-util libdb-devel (libdb-5.3.
 Docs: How to install (with env variables), replication, exception list,
 testsuite, not in Python 3.
 
+
+
 18.1.3 -:
   * Python 3.10 support. Tested in 3.10a2.
 
@@ -42,6 +44,14 @@ testsuite, not in Python 3.
 
   * Support "DB.get_lk_exclusive()" and "DB.set_lk_exclusive()" if you are
     linking against Oracle Berkeley DB 5.3 or newer.
+
+  * WARNING - BREAKING CHANGE: The record number in the tuple returned by
+    "DB.consume()" is now a number instead of a binary key.
+
+  * WARNING - BREAKING CHANGE: The record number in the tuple returned by
+    "DB.consume_wait()" is now a number instead of a binary key.
+
+  * "DB.get()" and "DB.pget()" could misunderstand flags.
 
 18.1.2 - 2020-12-07:
   * Releases 18.1.0 and 18.1.1 were incomplete. Thanks to Mihai.i
